Fix header icon balance and nav text wrapping
- Recolor Facebook icon to sky blue, unify size with Instagram icon
- Align mobile contact/Instagram/Facebook icon boxes to same size and position
- Replace contact label with Vietnamese text and prevent line wrapping
- Prevent main nav items from shrinking/wrapping at narrow desktop widths

--- a/wp-content/themes/clearline-child/style.css
+++ b/wp-content/themes/clearline-child/style.css
@@ -782,6 +782,7 @@ navigation - グローバルナビなど
 }
 .c-gnav__item {
   height: 100%;
+  flex-shrink: 0;
 }
 .c-gnav__link {
   width: 100%;
@@ -822,6 +823,7 @@ navigation - グローバルナビなど
   color: #FFF;
   font-weight: 900;
   letter-spacing: 0.1em;
+  white-space: nowrap;
 }
 @media screen and (min-width: 1400px) {
   .c-gnav__en {
@@ -856,6 +858,7 @@ navigation - グローバルナビなど
   font-size: 0.75rem;
   margin-bottom: 0.5em;
   letter-spacing: 0.1em;
+  white-space: nowrap;
 }
 @media screen and (min-width: 1400px) {
   .c-gnav__jp {
@@ -10832,10 +10835,11 @@ header - ヘッダー内のクラス
   content: "Instagram";
   color: #FFF;
   position: absolute;
-  bottom: 10px;
-  font-size: 8px;
+  bottom: 9px;
+  font-size: 7px;
   width: 100%;
   text-align: center;
+  white-space: nowrap;
 }
 .c-header-instapc {
   text-decoration: none;
@@ -10850,8 +10854,10 @@ header - ヘッダー内のクラス
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  padding: 0 20px;
+  gap: 6px;
+  padding: 0 14px;
   border-left: solid #FFF 2px;
+  white-space: nowrap;
 }
 @media screen and (max-width: 991px) {
   .c-header-instapc {
@@ -10860,17 +10866,18 @@ header - ヘッダー内のクラス
 }
 @media (min-width: 992px) and (max-width: 1135px) {
   .c-header-instapc {
-    padding: 0 0;
+    padding: 0 8px;
   }
 }
 .c-header-instapc:before {
   background-image: url(./images/common/img_logo_insta.svg) !important;
   display: block;
-  background-position: center right;
+  background-position: center;
   background-repeat: no-repeat;
   content: "";
-  height: 50px;
-  width: 50px;
+  height: 32px;
+  width: 32px;
+  flex-shrink: 0;
   background-size: contain;
 }
 .c-header-instapc::after {
@@ -10878,7 +10885,7 @@ header - ヘッダー内のクラス
   display: inline-block;
   color: #FFF;
   font-size: 13px;
-  width: 6em;
+  white-space: nowrap;
   text-align: center;
 }
 @media screen and (min-width: 1200px) {
@@ -10915,10 +10922,11 @@ header - ヘッダー内のクラス
   content: "Facebook";
   color: #FFF;
   position: absolute;
-  bottom: 10px;
-  font-size: 8px;
+  bottom: 9px;
+  font-size: 7px;
   width: 100%;
   text-align: center;
+  white-space: nowrap;
 }
 .c-header-fbpc {
   text-decoration: none;
@@ -10933,8 +10941,10 @@ header - ヘッダー内のクラス
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  padding: 0 20px;
+  gap: 6px;
+  padding: 0 14px;
   border-left: solid #FFF 2px;
+  white-space: nowrap;
 }
 @media screen and (max-width: 991px) {
   .c-header-fbpc {
@@ -10943,17 +10953,18 @@ header - ヘッダー内のクラス
 }
 @media (min-width: 992px) and (max-width: 1135px) {
   .c-header-fbpc {
-    padding: 0 0;
+    padding: 0 8px;
   }
 }
 .c-header-fbpc:before {
   background-image: url(./images/common/img_logo_fb.svg) !important;
   display: block;
-  background-position: center right;
+  background-position: center;
   background-repeat: no-repeat;
   content: "";
-  height: 50px;
-  width: 50px;
+  height: 32px;
+  width: 32px;
+  flex-shrink: 0;
   background-size: contain;
 }
 .c-header-fbpc::after {
@@ -10961,7 +10972,7 @@ header - ヘッダー内のクラス
   display: inline-block;
   color: #FFF;
   font-size: 13px;
-  width: 6em;
+  white-space: nowrap;
   text-align: center;
 }
 @media screen and (min-width: 1200px) {
@@ -10984,24 +10995,25 @@ header - ヘッダー内のクラス
 .c-header-contact:before {
   background-image: url(./images/common/img_logo_mail.svg) !important;
   display: block;
-  background-position: center right;
+  background-position: center;
   background-repeat: no-repeat;
   content: "";
-  height: 24px;
-  width: 24px;
+  height: 30px;
+  width: 30px;
   background-size: contain;
   position: absolute;
-  top: 10px;
-  left: calc(50% - 12px);
+  top: 8px;
+  left: calc(50% - 15px);
 }
 .c-header-contact::after {
-  content: "お問い合わせ";
+  content: "liên hệ ngay";
   color: #FFF;
   position: absolute;
-  bottom: 10px;
-  font-size: 8px;
+  bottom: 9px;
+  font-size: 7px;
   width: 100%;
   text-align: center;
+  white-space: nowrap;
 }
 
 .c-header-nav {
